--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/dom": "^9.3.1",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "typescript": "^5.1.3"
